POWR-243 Refactor alert and notification views to use new view style

--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_action_link
     - field.storage.node.field_severity
     - field.storage.node.field_summary
     - node.type.alert
@@ -10,8 +11,10 @@ dependencies:
     - workflows.workflow.editorial
   module:
     - content_moderation
+    - link
     - node
     - options
+    - portland
     - user
 id: alerts
 label: Alerts
@@ -59,11 +62,19 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: default
+        type: portland_alerts
         options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
+          mapping:
+            toggle_title_field: 1
+            title_field: title
+            toggle_id_field: 1
+            id_field: nid
+            toggle_changed_field: 1
+            changed_field: changed
+            type_field: field_severity
+            summary_field: field_summary
+            action_link_field: field_action_link
+          dismissible: 0
       row:
         type: fields
       fields:
@@ -116,7 +127,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_key
+          type: list_default
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -256,10 +267,10 @@ display:
           group_type: group
           admin_label: ''
           label: ''
-          exclude: true
+          exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: 'Updated {{ changed }}'
             make_link: false
             path: ''
             absolute: false
@@ -300,7 +311,7 @@ display:
           type: timestamp
           settings:
             date_format: custom
-            custom_date_format: U
+            custom_date_format: 'g:i a M j, Y'
             timezone: ''
           group_column: value
           group_columns: {  }
@@ -314,69 +325,6 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: changed
-          plugin_id: field
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: true
-            text: '<span id="{{ nid }}" data-nid="{{ nid }}" data-changed="{{ changed }}">{{ title }} </span>'
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
           plugin_id: field
         field_summary:
           id: field_summary
@@ -440,6 +388,138 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          plugin_id: field
+        field_action_link:
+          id: field_action_link
+          table: node__field_action_link
+          field: field_action_link
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: uri
+          type: link
+          settings:
+            trim_length: null
+            url_only: false
+            url_plain: false
+            rel: '0'
+            target: '0'
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: title
           plugin_id: field
       filters:
         type:
@@ -538,6 +618,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
@@ -548,6 +629,26 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      style:
+        type: portland_alerts
+        options:
+          mapping:
+            toggle_title_field: 0
+            title_field: title
+            toggle_id_field: 1
+            id_field: nid
+            toggle_changed_field: 1
+            changed_field: changed
+            type_field: field_severity
+            summary_field: field_summary
+            action_link_field: field_action_link
+          dismissible: 1
+      defaults:
+        style: false
+        row: false
+      row:
+        type: fields
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -556,6 +657,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
@@ -587,6 +689,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
