--- a/web/sites/default/config/views.view.group_notifications_content.yml
+++ b/web/sites/default/config/views.view.group_notifications_content.yml
@@ -12,6 +12,7 @@ dependencies:
     - link
     - node
     - options
+    - portland
     - user
 id: group_notifications_content
 label: 'Group notifications content'
@@ -59,7 +60,19 @@ display:
           items_per_page: 0
           offset: 0
       style:
-        type: default
+        type: portland_alerts
+        options:
+          mapping:
+            toggle_title_field: 1
+            title_field: title
+            toggle_id_field: 1
+            id_field: nid
+            toggle_changed_field: 1
+            changed_field: changed
+            type_field: field_notification_severity
+            summary_field: field_summary
+            action_link_field: field_action_link
+          dismissible: 1
       row:
         type: fields
       fields:
@@ -114,7 +127,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -330,8 +343,8 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: 'Updated {{ changed }}'
             make_link: false
             path: ''
             absolute: false
@@ -507,6 +520,18 @@ display:
           entity_field: type
           plugin_id: bundle
       sorts:
+        field_notification_severity_value:
+          id: field_notification_severity_value
+          table: node__field_notification_severity
+          field: field_notification_severity_value
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
         changed:
           id: changed
           table: node_field_data
