--- a/web/sites/default/config/views.view.group_notifications_homepage.yml
+++ b/web/sites/default/config/views.view.group_notifications_homepage.yml
@@ -11,6 +11,7 @@ dependencies:
     - link
     - node
     - options
+    - portland
 id: group_notifications_homepage
 label: 'Group notifications homepage'
 module: views
@@ -56,11 +57,19 @@ display:
           items_per_page: 0
           offset: 0
       style:
-        type: default
+        type: portland_alerts
         options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: false
+          mapping:
+            toggle_title_field: 1
+            title_field: title
+            toggle_id_field: 1
+            id_field: nid
+            toggle_changed_field: 1
+            changed_field: changed
+            type_field: field_notification_severity
+            summary_field: field_summary
+            action_link_field: field_action_link
+          dismissible: 1
       row:
         type: fields
         options:
@@ -499,6 +508,18 @@ display:
           entity_field: status
           plugin_id: boolean
       sorts:
+        field_notification_severity_value:
+          id: field_notification_severity_value
+          table: node__field_notification_severity
+          field: field_notification_severity_value
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
         changed:
           id: changed
           table: node_field_data
