--- a/web/sites/default/config/views.view.group_notifications_list.yml
+++ b/web/sites/default/config/views.view.group_notifications_list.yml
@@ -12,6 +12,7 @@ dependencies:
     - link
     - node
     - options
+    - portland
     - user
 id: group_notifications_list
 label: 'Group notifications list'
@@ -58,11 +59,19 @@ display:
         options:
           offset: 0
       style:
-        type: default
+        type: portland_alerts
         options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
+          mapping:
+            toggle_title_field: 1
+            title_field: title
+            toggle_id_field: 1
+            id_field: nid
+            toggle_changed_field: 1
+            changed_field: changed
+            type_field: field_notification_severity
+            summary_field: field_summary
+            action_link_field: field_action_link
+          dismissible: 0
       row:
         type: fields
         options:
@@ -137,39 +146,54 @@ display:
           id: title
           table: node_field_data
           field: title
-          entity_type: node
-          entity_field: title
-          label: ''
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            trim: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            html: false
-          hide_empty: false
-          empty_zero: false
-          settings:
-            link_to_entity: true
-          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
+          label: ''
           exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: false
+            ellipsis: false
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
+          settings:
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -180,6 +204,9 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          entity_type: node
+          entity_field: title
+          plugin_id: field
         field_summary:
           id: field_summary
           table: node__field_summary
@@ -465,21 +492,33 @@ display:
           entity_field: type
           plugin_id: bundle
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_notification_severity_value:
+          id: field_notification_severity_value
+          table: node__field_notification_severity
+          field: field_notification_severity_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+        changed:
+          id: changed
+          table: node_field_data
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
           exposed: false
           expose:
             label: ''
           granularity: second
+          entity_type: node
+          entity_field: changed
+          plugin_id: date
       title: Notifications
       header: {  }
       footer: {  }
