POWR-243 Show notifications everywhere except on a notification listing

--- a/web/sites/default/config/block.block.cloudy_views_block__group_notifications_homepage_block.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_notifications_homepage_block.yml
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: '/group/*'
-    negate: false
+    pages: '/group/*/notifications'
+    negate: true
     context_mapping: {  }
