POWR-133 Add image caption.

--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_table_browser
+    - field.field.paragraph.image.field_caption
     - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_alignment
     - paragraphs.paragraphs_type.image
@@ -15,6 +16,14 @@ targetEntityType: paragraph
 bundle: image
 mode: default
 content:
+  field_caption:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_image:
     type: entity_browser_entity_reference
     weight: 0
