--- a/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.image.field_caption
     - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_alignment
     - paragraphs.paragraphs_type.image
@@ -21,4 +22,5 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_caption: true
   field_image_alignment: true
