--- a/web/sites/default/config/responsive_image.styles.paragraph_image.yml
+++ b/web/sites/default/config/responsive_image.styles.paragraph_image.yml
@@ -16,11 +16,8 @@ image_style_mappings:
   -
     breakpoint_id: bootstrap_barrio.extra
     multiplier: 1x
-    image_mapping_type: sizes
-    image_mapping:
-      sizes: '(min-width: 1000px) 480px, 100vw'
-      sizes_image_styles:
-        - responsive_extra
+    image_mapping_type: image_style
+    image_mapping: responsive_extra
   -
     breakpoint_id: bootstrap_barrio.large
     multiplier: 1x
