POWR-134 Video paragraph type

--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -17,6 +17,9 @@ targetEntityType: media
 bundle: image
 mode: embedded
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
   image:
     type: responsive_image
     weight: 0
