--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_transcript
     - media.type.video
   module:
+    - text
     - video_embed_field
 _core:
   default_config_hash: ULSDSeb1LGUAS40ia_8qngabv0GTcJAaHGl67xDUNsA
@@ -25,6 +27,13 @@ content:
       height: 480
       autoplay: true
     third_party_settings: {  }
+    region: content
+  field_transcript:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   name:
     label: hidden
