--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.media.embedded
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_transcript
     - media.type.video
   module:
     - video_embed_field
@@ -18,7 +19,7 @@ mode: embedded
 content:
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       responsive: true
@@ -28,8 +29,10 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  content_moderation_control: true
   created: true
   field_media_in_library: true
+  field_transcript: true
   name: true
   thumbnail: true
   uid: true
