--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.media.video.field_media_in_library
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_transcript
     - media.type.video
   module:
     - content_moderation
     - maxlength
+    - text
     - video_embed_field
 _core:
   default_config_hash: OUea_b_jf81XjPvIY9J8KrRUckqz2APuLv4bkxYfdT4
@@ -23,9 +25,17 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_transcript:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 3
+    weight: 4
     settings: {  }
     region: content
     third_party_settings: {  }
