--- a/web/sites/default/config/core.entity_form_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.document.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_document
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_summary
     - media.type.document
   module:
     - content_moderation
@@ -17,15 +18,28 @@ bundle: document
 mode: default
 content:
   field_document:
-    weight: 1
+    weight: 2
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
     region: content
+  field_summary:
+    weight: 1
+    settings:
+      rows: 2
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: string_textarea
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 2
+    weight: 3
     settings: {  }
     region: content
     third_party_settings: {  }
