--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.media.document.field_document
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_summary
     - media.type.document
   module:
     - file
@@ -19,7 +20,7 @@ content:
   created:
     label: hidden
     type: timestamp
-    weight: 3
+    weight: 4
     settings:
       date_format: medium
       custom_date_format: ''
@@ -27,12 +28,20 @@ content:
     third_party_settings: {  }
     region: content
   field_document:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
+    region: content
+  field_summary:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   name:
     label: hidden
@@ -45,7 +54,7 @@ content:
   uid:
     label: hidden
     type: author
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
