--- a/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
@@ -6,9 +6,8 @@ dependencies:
     - core.entity_view_mode.media.embedded
     - field.field.media.document.field_document
     - field.field.media.document.field_media_in_library
+    - field.field.media.document.field_summary
     - media.type.document
-  module:
-    - file
 _core:
   default_config_hash: qwXr3yVUHU3LwMQ1n9mTyDj2s7sUqpNtasS-nSu86rE
 id: media.document.embedded
@@ -16,25 +15,19 @@ targetEntityType: media
 bundle: document
 mode: embedded
 content:
-  field_document:
-    weight: 1
-    label: hidden
-    settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
-    type: file_default
-    region: content
   name:
     type: string
     weight: 0
     region: content
     label: hidden
     settings:
-      link_to_entity: false
+      link_to_entity: true
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
+  field_document: true
   field_media_in_library: true
+  field_summary: true
   thumbnail: true
   uid: true
