--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -26,9 +26,14 @@ targetEntityType: node
 bundle: city_service
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_service_mode:
     type: entity_reference_revisions_entity_view
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       view_mode: default
@@ -36,14 +41,6 @@ content:
     third_party_settings: {  }
     region: content
   field_summary:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_time_to_complete:
     weight: 1
     label: hidden
     settings:
@@ -51,8 +48,15 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_time_to_complete:
+    weight: 2
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
 hidden:
-  content_moderation_control: true
   field_audience: true
   field_community_actions: true
   field_related_content: true
