--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -29,8 +29,13 @@ targetEntityType: node
 bundle: event
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_all_day:
-    weight: 1
+    weight: 2
     label: above
     settings:
       format: default
@@ -40,7 +45,7 @@ content:
     type: boolean
     region: content
   field_body:
-    weight: 7
+    weight: 8
     label: hidden
     settings:
       view_mode: default
@@ -49,7 +54,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_end_date:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       timezone_override: ''
@@ -58,15 +63,16 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 5
+    weight: 6
     label: hidden
-    settings: {  }
+    settings:
+      time_format: 'h:i a'
     third_party_settings: {  }
     type: time_formatter
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 6
+    weight: 7
     label: hidden
     settings:
       view_mode: default
@@ -74,7 +80,7 @@ content:
     third_party_settings: {  }
     region: content
   field_start_date:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       timezone_override: ''
@@ -83,14 +89,15 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 3
+    weight: 4
     label: hidden
-    settings: {  }
+    settings:
+      time_format: 'h:i a'
     third_party_settings: {  }
     type: time_formatter
     region: content
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -98,5 +105,4 @@ content:
     type: string
     region: content
 hidden:
-  content_moderation_control: true
   links: true
