--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -23,8 +23,13 @@ targetEntityType: node
 bundle: guide
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       view_mode: default
@@ -33,7 +38,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_summary_and_lead_paragraph:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -41,7 +46,6 @@ content:
     type: string
     region: content
 hidden:
-  content_moderation_control: true
   field_related_content: true
   field_topics: true
   links: true
