--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -20,9 +20,14 @@ targetEntityType: node
 bundle: information
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body:
     type: entity_reference_revisions_entity_view
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -30,6 +35,5 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  content_moderation_control: true
   links: true
   scheduled_publication: true
