--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -22,8 +22,13 @@ targetEntityType: node
 bundle: news
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       view_mode: default
@@ -32,7 +37,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_summary_and_lead_paragraph:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -40,7 +45,7 @@ content:
     type: string
     region: content
   field_topics:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link: true
@@ -48,5 +53,4 @@ content:
     type: entity_reference_label
     region: content
 hidden:
-  content_moderation_control: true
   links: true
