POWR-333 add icons to paragraph types.

--- a/web/sites/default/config/paragraphs.paragraphs_type.image.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.image.yml
@@ -1,9 +1,11 @@
 uuid: b5130957-69de-4105-a7eb-bc7647b1db2e
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:81fa8489-a961-4a98-a73a-fceda00c886e'
 id: image
 label: Image
-icon_uuid: null
-description: ''
+icon_uuid: 81fa8489-a961-4a98-a73a-fceda00c886e
+description: 'Add an image and optionally set its alignment to left or right to allow text to wrap around the image. You must first add the image to your group so that it appears in your group''s media.'
 behavior_plugins: {  }
