--- a/web/sites/default/config/paragraphs.paragraphs_type.video.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.video.yml
@@ -1,9 +1,11 @@
 uuid: a378aae7-8d89-41ff-a133-743adec7bbb1
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:2c3770ce-e3fe-480e-8c93-d22249b737fe'
 id: video
 label: Video
-icon_uuid: null
-description: 'This paragraph type contains the Video media type.'
+icon_uuid: 2c3770ce-e3fe-480e-8c93-d22249b737fe
+description: 'Add a new YouTube or Vimeo embedded video to your page. You must first upload the video to your group so that it appears in your group''s media.'
 behavior_plugins: {  }
