--- a/web/sites/default/config/field.field.media.document.field_document.yml
+++ b/web/sites/default/config/field.field.media.document.field_document.yml
@@ -26,7 +26,7 @@ default_value: {  }
 default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'txt pdf doc docx'
+  file_extensions: 'txt pdf doc docx xls xlsx ppt pptx'
   max_filesize: ''
   description_field: false
   handler: 'default:file'
