--- a/web/sites/default/config/paragraphs.paragraphs_type.document.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.document.yml
@@ -1,9 +1,11 @@
 uuid: bdf24f72-d725-4d9d-be4d-7fbe61f08ea7
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:869e1391-51ec-4cf2-8e3e-7819467eae46'
 id: document
 label: Document
-icon_uuid: null
-description: ''
+icon_uuid: 869e1391-51ec-4cf2-8e3e-7819467eae46
+description: 'Add a reference to a PDF, .txt, or Microsoft Office document to your content. You must first upload this document to your group so that we can show it in your group''s media. Please ensure you have taken steps to make your document as accessible as possible before adding it to the website.'
 behavior_plugins: {  }
