POWR-288 - fixed aggregation bug; content type aggregation was grouping on wrong column.

--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -323,7 +323,7 @@ display:
           click_sort_column: target_id
           type: portland_plural_label
           settings: {  }
-          group_column: entity_id
+          group_column: target_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
