POWR-291 initial commit with new paragraph types and entity references.

--- a/web/sites/default/config/core.entity_view_display.paragraph.location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.location.default.yml
@@ -3,21 +3,23 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.location.field_service_location
+    - field.field.paragraph.location.field_location_type
     - paragraphs.paragraphs_type.location
+  module:
+    - entity_reference_revisions
 id: paragraph.location.default
 targetEntityType: paragraph
 bundle: location
 mode: default
 content:
-  field_service_location:
+  field_location_type:
+    type: entity_reference_revisions_entity_view
     weight: 0
-    label: hidden
+    label: above
     settings:
-      view_mode: teaser
-      link: false
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    type: entity_reference_entity_view
     region: content
 hidden:
   scheduled_publication: true
