--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.topics.field_fontawesome_icon
     - taxonomy.vocabulary.topics
   module:
+    - ds
     - panelizer
     - text
 third_party_settings:
@@ -14,6 +15,47 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+    displays:
+      default:
+        blocks:
+          cb1e636c-f1b9-4ae5-a24f-d884725e2f15:
+            id: 'entity_field:taxonomy_term:description'
+            label: Description
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: hidden
+              type: text_default
+              settings: {  }
+              third_party_settings: {  }
+              weight: 0
+              region: content
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            region: content
+            weight: 0
+            uuid: cb1e636c-f1b9-4ae5-a24f-d884725e2f15
+        id: panels_variant
+        label: Default
+        uuid: c6660c3b-c7bd-491c-811e-d8474e6b06c9
+        weight: 0
+        layout: layout_onecol
+        layout_settings: {  }
+        page_title: '[term:name]'
+        storage_type: ''
+        storage_id: ''
+        builder: ipe
+        pattern: panelizer
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - description
 id: taxonomy_term.topics.default
 targetEntityType: taxonomy_term
 bundle: topics
@@ -22,16 +64,9 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_fontawesome_icon:
-    weight: 2
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_fontawesome_icon: true
