--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.full
+    - field.field.taxonomy_term.topics.field_fontawesome_icon
     - taxonomy.vocabulary.topics
   module:
+    - ds
     - panelizer
     - text
 third_party_settings:
@@ -14,6 +16,33 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - taxonomy_term_title
+        - description
+    fields:
+      taxonomy_term_title:
+        plugin_id: taxonomy_term_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          wrapper: h1
+          class: 'fa fas-[term:original:field_fontawesome_icon]'
+          link: false
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: taxonomy_term.topics.full
 targetEntityType: taxonomy_term
 bundle: topics
