--- a/web/sites/default/config/field.storage.group.field_building.yml
+++ b/web/sites/default/config/field.storage.group.field_building.yml
@@ -1,13 +1,13 @@
-uuid: b21a28c9-84a9-44cc-ab14-a9684e7845bf
+uuid: 6fd84398-a61b-4100-875b-6a2a01158664
 langcode: en
 status: true
 dependencies:
   module:
+    - group
     - node
-    - paragraphs
-id: paragraph.field_service_location
-field_name: field_service_location
-entity_type: paragraph
+id: group.field_building
+field_name: field_building
+entity_type: group
 type: entity_reference
 settings:
   target_type: node
