--- a/web/sites/default/config/field.storage.paragraph.field_address.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_address.yml
@@ -1,17 +1,16 @@
-uuid: b21a28c9-84a9-44cc-ab14-a9684e7845bf
+uuid: be0e1473-548a-4016-b942-0a52e628251e
 langcode: en
 status: true
 dependencies:
   module:
-    - node
+    - address
     - paragraphs
-id: paragraph.field_service_location
-field_name: field_service_location
+id: paragraph.field_address
+field_name: field_address
 entity_type: paragraph
-type: entity_reference
-settings:
-  target_type: node
-module: core
+type: address
+settings: {  }
+module: address
 locked: false
 cardinality: 1
 translatable: true
