--- a/web/sites/default/config/field.storage.paragraph.field_select_a_group.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_select_a_group.yml
@@ -1,16 +1,16 @@
-uuid: b21a28c9-84a9-44cc-ab14-a9684e7845bf
+uuid: 3f2b3930-a9df-43e7-bd28-400d389505b4
 langcode: en
 status: true
 dependencies:
   module:
-    - node
+    - group
     - paragraphs
-id: paragraph.field_service_location
-field_name: field_service_location
+id: paragraph.field_select_a_group
+field_name: field_select_a_group
 entity_type: paragraph
 type: entity_reference
 settings:
-  target_type: node
+  target_type: group
 module: core
 locked: false
 cardinality: 1
