--- a/web/sites/default/config/paragraphs.paragraphs_type.location.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.location.yml
@@ -7,5 +7,5 @@ dependencies:
 id: location
 label: Location
 icon_uuid: bfdb26b2-2b4e-489f-8fa4-b5d57cc76651
-description: 'Add a service location with a link to get directions'
+description: 'Add a service location, building, city office, or custom address.'
 behavior_plugins: {  }
