--- a/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.location.default.yml
@@ -3,31 +3,27 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.location.field_service_location
+    - field.field.paragraph.location.field_location_type
     - paragraphs.paragraphs_type.location
   module:
-    - content_moderation
-    - datetime
+    - paragraphs
 id: paragraph.location.default
 targetEntityType: paragraph
 bundle: location
 mode: default
 content:
-  field_service_location:
-    weight: 101
+  field_location_type:
+    type: entity_reference_paragraphs
+    weight: 21
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Type
+      title_plural: Types
+      edit_mode: closed
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: _none
     third_party_settings: {  }
-    type: entity_reference_autocomplete
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
-    third_party_settings: {  }
   scheduled_publication:
     type: datetime_default
     weight: 20
@@ -36,5 +32,6 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  moderation_state: true
   status: true
   uid: true
