--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -3,26 +3,36 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_address
     - field.field.group.bureau_office.field_audience
+    - field.field.group.bureau_office.field_building
+    - field.field.group.bureau_office.field_email
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
+    - field.field.group.bureau_office.field_phone
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+  module:
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - label
+        - field_summary
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
-  field_audience:
-    weight: 3
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_summary:
     type: string
     weight: 1
@@ -31,14 +41,6 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_topics:
-    weight: 2
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   label:
     label: hidden
     type: string
@@ -50,7 +52,13 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
+  field_audience: true
+  field_building: true
+  field_email: true
   field_logo: true
   field_official_organization_name: true
+  field_phone: true
   field_shortname_or_acronym: true
+  field_topics: true
   uid: true
