--- a/web/sites/default/config/field.field.paragraph.building.field_building.yml
+++ b/web/sites/default/config/field.field.paragraph.building.field_building.yml
@@ -1,24 +1,24 @@
-uuid: 9000cad4-5c00-4ad3-9e40-2da992ac1216
+uuid: 3931cf72-e072-496e-9140-04f3f5ed3c58
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_service_location
-    - node.type.service_location
-    - paragraphs.paragraphs_type.location
+    - field.storage.paragraph.field_building
+    - node.type.building
+    - paragraphs.paragraphs_type.building
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.location.field_service_location
-field_name: field_service_location
+id: paragraph.building.field_building
+field_name: field_building
 entity_type: paragraph
-bundle: location
-label: 'Service location'
+bundle: building
+label: Building
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -26,7 +26,7 @@ settings:
   handler: 'default:node'
   handler_settings:
     target_bundles:
-      service_location: service_location
+      building: building
     sort:
       field: _none
     auto_create: false
