--- a/web/sites/default/config/field.storage.paragraph.field_building.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_building.yml
@@ -1,12 +1,12 @@
-uuid: b21a28c9-84a9-44cc-ab14-a9684e7845bf
+uuid: 00a20ebb-47c6-4b3a-8be5-5df8b39b4380
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - paragraphs
-id: paragraph.field_service_location
-field_name: field_service_location
+id: paragraph.field_building
+field_name: field_building
 entity_type: paragraph
 type: entity_reference
 settings:
