POWR-335 - fixed bug that was preventing notifications from appearing in Menu on services and guides, had to add the Notification plugin to the relationship options in view config.

--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -423,6 +423,11 @@ display:
             'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:news': 'group_node:news'
+            'group_node:notification': 'group_node:notification'
+            'group_media:document': '0'
+            'group_media:image': '0'
+            'group_media:video': '0'
+            'group_node:alert': '0'
             'group_node:building': '0'
             'group_node:information': '0'
             'group_node:service_location': '0'
@@ -442,6 +447,8 @@ display:
             'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:news': 'group_node:news'
+            'group_node:notification': 'group_node:notification'
+            'group_node:alert': '0'
             'group_node:building': '0'
             'group_node:information': '0'
             'group_node:service_location': '0'
